--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,7 +1,9 @@
 spring:
+  application:
+    name: cms_system
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/cms?useUnicode=true&characterEncoding=utf-8&useSSL=false&serverTimezone=GMT%2B8
+    url: jdbc:mysql://106.15.248.56:3306/cms?useUnicode=true&characterEncoding=utf-8&useSSL=false&serverTimezone=GMT%2B8
     username: root
     password: 123456Qwe
 
@@ -16,8 +18,10 @@ pagehelper:
 qiniu:
   accessKey: ygdIFwQ3td8D5occ_MXOBp8ToO5HuNYnubaZYsEk
   secretKey: 5F21zs3od_C_w8oSB8gYW1vehwVO_4IP9JDYoRbC
-  buckName: community-manage
-  qiniuDomin: qp859jol4.hn-bkt.clouddn.com
+  buckName: cms-test2021
+  qiniuDomin: qqtd105ll.hn-bkt.clouddn.com
+server:
+  port: 2020
 
 
 
